name:                labyrinth
version:             0.1.0.0
synopsis:            A complicated turn-based game
-- description:         
homepage:            https://github.com/koterpillar/labyrinth
license:             MIT
license-file:        LICENSE
author:              Alexey Kotlyarov
maintainer:          koterpillar@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable labyrinth-server
  main-is:             LabyrinthServer.hs
  build-depends:       base ==4.5.*, mtl ==2.1.*, template-haskell ==2.7.*, acid-state ==0.8.*, happstack-server ==7.1.*, derive ==2.5.*, safecopy ==0.8.*, parsec ==3.1.*
  hs-source-dirs:      src

Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base ==4.5.*, mtl ==2.1.*, template-haskell ==2.7.*, acid-state ==0.8.*, happstack-server ==7.1.*, derive ==2.5.*, safecopy ==0.8.*, parsec ==3.1.*, HTF ==0.10.*, HUnit ==1.2.*, QuickCheck ==2.5.*
  hs-source-dirs:      src, testsuite
